# icarusframework

./: .gitignore  CMakeLists.txt  DOXYGEN  INSTALL.md  README.md
cmake/: MNTR.cmake  mntr.cmake
include/icarus/: action.h  application.h  config.h  content.h  digests.h  dispatcher.h  exceptions.h  general.h  interfaces.h  log.h  memcached.h  multithreadedapplication.h  nullable.h  result.h  statuses.h  typeconversion-commons.h  typeconversion.h
include/icarus/db/: databases.h  field.h  migrations.h
include/icarus/http/: client.h  cookies.h  dataconversion.h  exceptions.h  headers.h  querystring.h  request.h  response.h
include/icarus/http/fcgi/: application.h  client.h  request.h  response.h
include/icarus/migrations/: manager.h  migration.h  runner.cpp  runner.h  soci.h
include/icarus/routes/: compiler.h  data.h  exceptions.h  fieldtypes.h  parser.h  routeswriter.h  to_url.h  typeconversion-commons.h  typeconversion.h
include/icarus/session/: manager.h  memcached.h  memory.h  session.h
include/minotaur/: compiler.h  cpptemplatebuilder.h  exceptions.h  metainfo.h  parser.h  templatebuilder.h
include/minotaur/compiler/: compilefile.h  compiler.h  cpptemplatebuilder.h  exceptions.h  metainfo.h  templatebuilder.h
minotaur/: CMakeLists.txt
minotaur/src/: fileinfo.hpp  main.cpp
minotaur/src/compiler/: compilefile.hpp  compiler.hpp  cpptemplatebuilder.hpp  exceptions.hpp  parser.hpp  templatebuilder.hpp
src/: config.h.in
src/controllers/: controller.hpp
src/framework/: log.hpp  result.hpp
src/framework/http/: cookies.hpp  exceptions.hpp  headers.hpp  request.hpp  response.hpp  statuses.h  statuses.hpp
src/framework/http/fcgi/: main.cpp  request.hpp
src/framework/routes/: compiler.hpp  data.hpp  exceptions.hpp  parser.hpp  routeswriter.hpp  to_url.hpp
src/framework/routes/writers/: fastcgi.hpp  simpleweb.hpp
src/icarus/: action.cpp  action.hpp  application.cpp  application.hpp  config.cpp  config.hpp  content.cpp  digests.cpp  dispatcher.cpp  exceptions.cpp  exceptions.hpp  general.cpp  interfaces.hpp  log.cpp  log.hpp  memcached.cpp  multithreadedapplication.cpp  multithreadedapplication.hpp  nullable.cpp  result.cpp  result.hpp  statuses.cpp  statuses.hpp  typeconversion.cpp
src/icarus/db/: databases.cpp  databases.hpp  field.cpp  field.hpp  migrations.cpp
src/icarus/http/: client.cpp  client.hpp  cookies.cpp  cookies.hpp  dataconversion.cpp  dataconversion.hpp  exceptions.cpp  exceptions.hpp  headers.cpp  headers.hpp  querystring.cpp  request.cpp  request.hpp  response.cpp  response.hpp  statuses.hpp
src/icarus/http/fcgi/: application.cpp  application.hpp  client.cpp  client.hpp  main.cpp  request.cpp  request.hpp  response.cpp  response.hpp
src/icarus/migrations/: manager.cpp  migration.cpp  soci.cpp
src/icarus/routes/: compiler.cpp  compiler.hpp  data.cpp  data.hpp  exceptions.cpp  exceptions.hpp  fieldtypes.cpp  fieldtypes.hpp  main.cpp  parser.cpp  parser.hpp  routeswriter.cpp  routeswriter.hpp  to_url.cpp  typeconversion.cpp
src/icarus/routes/writers/: fastcgi.hpp
src/icarus/session/: manager.cpp  memcached.cpp  memory.cpp  memory.hpp  session.cpp  session.hpp  sessionmanager.hpp
src/minotaur/: compiler.cpp  cpptemplatebuilder.cpp  exceptions.cpp  metainfo.cpp  mntr.cpp  ochainstream.hpp  parser.cpp  templatebuilder.cpp
src/minotaur/compiler/: compilefile.cpp  compilefile.hpp  compiler.cpp  compiler.hpp  cpptemplatebuilder.cpp  cpptemplatebuilder.hpp  exceptions.cpp  metainfo.cpp  metainfo.hpp  templatebuilder.cpp  templatebuilder.hpp
src/test/: routes.cpp  routes1.cpp  routes2.cpp  routes_groups.cpp
src/test/framework/routes/: data.cpp
src/test/icarus/config/: config
src/test/icarus/http/: headers.cpp
src/test/icarus/routes/: compiling.cpp  data.cpp  routes1.cpp  routes2.cpp  routes_groups.cpp
src/test/resources/minotaur/: .gitignore
src/test/resources/minotaur/templates/: sample.cpp.html
src/test/resources/routes/: routes1  routes2  routes_groups
test/icarus/: config.cpp  content.cpp  digests.cpp  memcached.cpp  typeconversions.cpp
test/icarus/http/: cookies.cpp  headers.cpp  querystring.cpp
test/icarus/routes/: compiling.cpp  data.cpp  routes1.cpp  routes2.cpp  routes_groups.cpp  typeconversions.cpp
test/icarus/session/: memory.cpp
test/minotaur/: parse.cpp
test/resources/: config
test/resources/minotaur/templates/: sample.cpp.html
test/resources/minotaur/templates/example2/: sample.cpp.html
test/resources/routes/: routes2
